--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,20 @@
+# http://editorconfig.org
+
 root = true
 
 [*]
 charset = utf-8
 end_of_line = lf
-max_line_length=100
-trim_trailing_whitespace = true
 insert_final_newline = true
-indent_style = space
+trim_trailing_whitespace = true
+
+[*.go]
+max_line_length=100
+indent_style = tab
 indent_size = 4
+
+[Makefile]
+indent_style = tab
 
 [*.{diff,patch,md}]
 trim_trailing_whitespace = false
