--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@ _*
 *.bk*
 *.swp
 .DS_Store
-*.i*
-out
+
+vendor
+coverage.txt
+dist
 
 # Binaries for programs and plugins
 *.exe
@@ -22,8 +24,12 @@ out
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# IntelliJ
+*.iml
+.idea
+
+# MS VSCode
+.vscode
+
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
-
-.idea/
-*.iml
