--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ jobs:
     working_directory: /go/src/github.com/r8d8/nem-toolchain
     steps:
       - checkout
-
       # specify any bash command here prefixed with `run: `
+      - run: make setup && make ci
       - run: go get -v -t -d ./...
       - run: bash <(curl -s https://codecov.io/bash)
       - run: go test -v ./... && curl -sL http://git.io/goreleaser | bash
