--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,4 +21,4 @@ jobs:
       - run: make setup && make ci
       - run: go get -v -t -d ./...
       - run: bash <(curl -s https://codecov.io/bash)
-      - run: go test -v ./... && curl -sL http://git.io/goreleaser | bash
+      - run: go test -n --snapshot && curl -sL http://git.io/goreleaser | bash
