--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -1,27 +1,13 @@
 build:
-  main: ./cmd/nem/main.go
-  goarch:
-    - amd64
+  main: cmd/nem/main.go
+  binary: up
   goos:
-    - windows
     - darwin
     - linux
-brew:
-  github:
-    owner: r8d8
-    name: homebrew-tap
-# Archive customization
-archive:
-  format: tar.gz
-  replacements:
-    amd64: 64-bit
-    darwin: macOS
-    linux: linux
-snapshot:
-  # Allows you to change the name of the generated snapshot
-  # releases. The following variables are available:
-  # - Commit
-  # - Tag
-  # - Timestamp
-  # Default: SNAPSHOT-{{.Commit}}
-  name_template: SNAPSHOT-{{.Commit}}
+    - windows
+    - freebsd
+    - netbsd
+    - openbsd
+  goarch:
+    - amd64
+    - 386
