--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,10 @@ jobs:
       - run: make setup
       - run: make ci
       - run: bash <(curl -s https://codecov.io/bash)
+
+  deployment:
+    tag:
+      tag: /v[0-9]+(\.[0-9]+)*(-.*)*/
+      owner: user
+      commands:
+        - curl -sL https://git.io/goreleaser | bash
