--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,10 @@ jobs:
       - run: make setup
       - run: make ci
       - run: bash <(curl -s https://codecov.io/bash)
-  deployment:
-    tag:
+    deployment:
+      filters:
+        branches:
+          only: master
       tag: /v[0-9]+(\.[0-9]+)*(-.*)*/
-      commands:
-        - curl -sL https://git.io/goreleaser | bash
+      steps:
+         - run: curl -sL https://git.io/goreleaser | bash
