--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     deployment:
       filters:
         branches:
-          only: master
+          only: feature/init_cli
       tag: /v[0-9]+(\.[0-9]+)*(-.*)*/
-      steps:
-         - run: curl -sL https://git.io/goreleaser | bash
+      commands:
+        - deploy.sh
