--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,10 @@ jobs:
       - run: make ci
       - run: bash <(curl -s https://codecov.io/bash)
     deployment:
-      filters:
-        branches:
-          only: feature/init_cli
-      tag: /v[0-9]+(\.[0-9]+)*(-.*)*/
-      commands:
-        - deploy.sh
+     release:
+     branch: feature/init_cli
+     commands:
+     — go get github.com/mitchellh/gox
+     — go get github.com/tcnksm/ghr
+     — gox -ldflags "-X main.Version $BUILD_VERSION -X main.BuildDate $BUILD_DATE" -output "dist/ncd_{{.OS}}_{{.Arch}}"
+     — ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/
