--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,18 +4,21 @@ jobs:
     docker:
       - image: circleci/golang:1.8
     working_directory: /go/src/github.com/r8d8/nem-toolchain
+    enviroment:
+      BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S')
+      BUILD_VERSION=$(git describe --tags)
     steps:
       - checkout
       - run: make setup
       - run: make ci
       - run: bash <(curl -s https://codecov.io/bash)
-    deployment:
-      release:
-      branch: feature/init_cli
-      commands:
-        — go get github.com/mitchellh/gox
-        — go get github.com/tcnksm/ghr
-        — export BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S')
-        - export BUILD_VERSION=$(git describe --tags)
-        - gox -ldflags "-X main.Version $BUILD_VERSION -X main.BuildDate $BUILD_DATE" -output "dist/ncd_{{.OS}}_{{.Arch}}"
-        — ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/
+      - deploy:
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*(-.*)*/
+#            branches: feature/init_cli
+          commands:
+            — go get github.com/mitchellh/gox
+            — go get github.com/tcnksm/ghr
+            - gox -ldflags "-X main.Version $BUILD_VERSION -X main.BuildDate $BUILD_DATE" -output "dist/ncd_{{.OS}}_{{.Arch}}"
+            — ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/
