--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
               only: /v[0-9]+(\.[0-9]+)*(-.*)*/
 #            branches: feature/init_cli
           command: |
+            mkdir -p dist/
             go get github.com/mitchellh/gox
             go get github.com/tcnksm/ghr
             gox -ldflags "-X main.Version $BUILD_VERSION -X main.BuildDate $BUILD_DATE" -output "dist/ncd_{{.OS}}_{{.Arch}}"
