--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
 
 workflows:
   version: 2
-  build-deploy:
+  build-n-deploy:
     jobs:
       - build
       - deploy:
@@ -36,4 +36,4 @@ workflows:
           tags:
             only: /v[0-9]+(\.[0-9]+)*(-.*)*/
           branches:
-            only: master
+            only: feature/init_cli
