--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,7 @@ workflows:
     jobs:
       - build
       - deploy:
-        requires:
-          - build
+        requires: - build
         filters:
 #          tags:
 #            only: /v[0-9]+(\.[0-9]+)*(-.*)*/
