--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
       BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S')
       BUILD_VERSION=$(git describe --tags)
     steps:
+      - checkout
       - run: mkdir -p dist
       - run: go get github.com/mitchellh/gox
       - run: go get github.com/tcnksm/ghr
