--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,16 +21,19 @@ jobs:
       - checkout
       - run: mkdir -p dist
       - run: make setup
-      - run: curl -sL https://git.io/goreleaser | bash
-#      - run: go get github.com/tcnksm/ghr
-#      - run: gox -ldflags "-X main.Version $BUILD_VERSION -X main.BuildDate $BUILD_DATE" -output "dist/ncd_{{.OS}}_{{.Arch}}" /go/src/github.com/r8d8/nem-toolchain/cmd/nem/main.go
-#      - run: ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/
+      - run: go get github.com/tcnksm/ghr
+      - run: go get github.com/mitchellh/gox
+      - run: gox -ldflags "-X main.Version=$BUILD_VERSION -X main.BuildDate=$BUILD_DATE" -output="dist/nem_{{.OS}}_{{.Arch}}" ./cmd/nem/
+      - run: ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/
 
 workflows:
   version: 2
   build-n-deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*(-.*)*/
       - deploy:
           requires:
             - build
