--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,7 @@ jobs:
       - checkout
       - run: mkdir -p dist
       - run: make setup
-      - run: go get github.com/tcnksm/ghr
-      - run: go get github.com/mitchellh/gox
-      - run: gox -ldflags "-X main.Version=$BUILD_VERSION -X main.BuildDate=$BUILD_DATE" -output="dist/nem_{{.OS}}_{{.Arch}}" ./cmd/nem/
-      - run: ghr -t $GITHUB_TOKEN -u $CIRCLE_PROJECT_USERNAME -r $CIRCLE_PROJECT_REPONAME --replace `git describe --tags` dist/
+      - run: curl -sL https://git.io/goreleaser | bash
 
 workflows:
   version: 2
@@ -41,4 +38,4 @@ workflows:
             tags:
               only: /v[0-9]+(\.[0-9]+)*(-.*)*/
             branches:
-              only: master
+              only: feature/init_deploy
