--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
   deploy:
     docker:
       - image: circleci/golang:1.8
-    working_directory: /go/src/github.com/r8d8/nem-toolchain
+    working_directory: /go/src/github.com/nem-toolchain/nem-toolchain
     enviroment:
       BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S')
       BUILD_VERSION=$(git describe --tags)
