--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
       - checkout
       - run: mkdir -p dist
       - run: make setup
+      - run: make build
       - run: curl -sL https://git.io/goreleaser | bash
 
 workflows:
