--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -4,7 +4,7 @@
 [[constraint]]
   name = "golang.org/x/crypto"
   branch = "issue/lack_of_keccak"
-  source = "https://github.com/r8d8/crypto.git"
+  source = "https://github.com/nem-toolchain/crypto.git"
 
 [[constraint]]
   name = "github.com/urfave/cli"
