--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,40 +3,18 @@ jobs:
   build:
     docker:
       - image: circleci/golang:1.8
-    working_directory: /go/src/github.com/nem-toolchain/nem-toolchain
+    working_directory: /go/src/github.com/r8d8/nem-toolchain
     steps:
       - checkout
       - run: make setup
       - run: make ci
       - run: bash <(curl -s https://codecov.io/bash)
-
-  deploy:
-    docker:
-      - image: circleci/golang:1.8
-    working_directory: /go/src/github.com/nem-toolchain/nem-toolchain
-    enviroment:
-      BUILD_DATE=$(date -u '+%Y/%m/%d %H:%M:%S')
-      BUILD_VERSION=$(git describe --tags)
-    steps:
-      - checkout
-      - run: mkdir -p dist
-      - run: make setup
-      - run: make build
-      - run: curl -sL https://git.io/goreleaser | bash
-
-workflows:
-  version: 2
-  build-n-deploy:
-    jobs:
-      - build:
-          filters:
-            tags:
-              only: /v[0-9]+(\.[0-9]+)*(-.*)*/
       - deploy:
-          requires:
-            - build
-          filters:
-            tags:
-              only: /v[0-9]+(\.[0-9]+)*(-.*)*/
-            branches:
-              only: master
+        name: Release
+        command: |
+          if [ -n "$CIRCLE_TAG" ]
+          then
+            curl -sL https://git.io/goreleaser | bash
+          else
+            echo "Not a release, skipping build"
+          fi
