--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,19 @@ jobs:
   build:
     docker:
       - image: circleci/golang:1.8
-    working_directory: /go/src/github.com/nem-toolchain/nem-toolchain
+    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
     steps:
       - checkout
       - run: make setup
       - run: make ci
       - run: bash <(curl -s https://codecov.io/bash)
       - deploy:
-          name: Release
+          name: goreleaser
           command: |
-            if git log -1 --pretty=%B | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+$";
-            then
-              curl -sL https://git.io/goreleaser | bash
-            else
-              echo "Not a release, skipping build"
+            echo "$CIRCLE_TAG"
+            if [[ ${CIRCLE_TAG} == v* ]]; then
+               curl -sL https://git.io/goreleaser | bash;
             fi
+deployment:
+  trigger_tag:
+    tag: /v[0-9]+(\.[0-9]+)*(-.*)*/
