--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,9 +11,9 @@ builds:
       - 386
       - amd64
 checksum:
-  name_template: '{{ .ProjectName }}_checksums.txt'
+  name_template: '{{ .ProjectName }}-{{ .Version }}-checksums.txt'
 archive:
-  name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}'
+  name_template: '{{ .ProjectName }}-{{ .Version }}-{{ .Os }}-{{ .Arch }}'
   replacements:
     darwin: Darwin
     linux: Linux
