circleci build fails
Try to fix it.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
           command: |
             echo "$CIRCLE_TAG"
             if [[ ${CIRCLE_TAG} == v* ]]; then
-              echo "A test message" | tee RELEASE_NOTES
-              curl -sL https://git.io/goreleaser | bash -s -- --release-notes=RELEASE_NOTES
+              curl -sL https://git.io/goreleaser | bash -s -- --release-notes \
+                <(git log --pretty=oneline --abbrev-commit $(git describe --tags --abbrev=0)^.. | grep '^[^ ]* \[')
             fi
 deployment:
   trigger_tag:
