--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,12 @@ jobs:
           name: goreleaser
           command: |
             if [[ -n ${CIRCLE_TAG} ]]; then
-              curl -sL https://raw.githubusercontent.com/nem-toolchain/nem-toolchain/master/scripts/goreleaser | bash -s -- --release-notes \
-                <(git log --pretty=oneline --abbrev-commit $(git describe --tags --abbrev=0)^.. | grep '^[^ ]* \[')
+              tempfile=$(mktemp)
+              git log --pretty=oneline --abbrev-commit $(git describe --tags --abbrev=0)^.. |
+                grep '^[^ ]* \[' |
+                tee $tempfile
+              curl -sL https://raw.githubusercontent.com/nem-toolchain/nem-toolchain/master/scripts/goreleaser |
+                bash -s -- --release-notes $tempfile
             fi
 deployment:
   trigger_tag:
