--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,13 @@ jobs:
           name: goreleaser
           command: |
             if [[ -n ${CIRCLE_TAG} ]]; then
+              echo "1"
               tempfile=$(mktemp)
+              echo "$tempfile"
               git log --pretty=oneline --abbrev-commit $(git describe --tags --abbrev=0)^.. |
                 grep '^[^ ]* \[' |
                 tee $tempfile
+              cat $tempfile
               curl -sL https://raw.githubusercontent.com/nem-toolchain/nem-toolchain/master/scripts/goreleaser |
                 bash -s -- --release-notes $tempfile
             fi
