--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,8 @@ jobs:
           name: goreleaser
           command: |
             if [[ -n ${CIRCLE_TAG} ]]; then
-              echo "1"
-              tempfile=$(mktemp)
-              echo "Hello, World!" | tee $tempfile
-              echo $tempfile
-              cat $tempfile
               curl -sL https://raw.githubusercontent.com/nem-toolchain/nem-toolchain/master/scripts/goreleaser |
-                bash -s -- --release-notes=$tempfile
+                bash -s -- --release-notes=SUPPORT.md
             fi
 deployment:
   trigger_tag:
