--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             if [[ -n ${CIRCLE_TAG} ]]; then
               curl -sL https://raw.githubusercontent.com/nem-toolchain/nem-toolchain/master/scripts/goreleaser |
-                bash -s -- --release-notes <(echo "# Hi")
+                bash -s -- --debug --release-notes <(echo "# Hi")
             fi
 deployment:
   trigger_tag:
