--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
           name: goreleaser
           command: |
             if [[ -n ${CIRCLE_TAG} ]]; then
-              curl -sL https://raw.githubusercontent.com/nem-toolchain/nem-toolchain/master/scripts/goreleaser |
-                bash -s -- --debug --release-notes <(echo "# Hi")
+              curl -sL https://git.io/goreleaser |
+                bash -s -- --debug --release-notes <(git log --pretty=oneline --abbrev-commit $(git describe --tags --abbrev=0)^.. | grep '^[^ ]* \[')
             fi
 deployment:
   trigger_tag:
