Vanity address search estimate times strange format
Start to use output format from `time.Duration` standard library type.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             if [[ -n ${CIRCLE_TAG} ]]; then
               curl -sL https://git.io/goreleaser |
-                bash -s -- --debug --release-notes <(git log --pretty=oneline --abbrev-commit $(git describe --tags --abbrev=0)^.. | grep '^[^ ]* \[')
+                bash -s -- --debug --release-notes <(git log --pretty=oneline --abbrev-commit $(git describe --tags --abbrev=0)^.. | grep -v '^[^ ]* \(Fix\|Merge\)')
             fi
 deployment:
   trigger_tag:
