--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
               curl -sL https://git.io/goreleaser |
                 bash -s -- --debug --release-notes <(git log --pretty=oneline --abbrev-commit $(git describe --tags --abbrev=0)^.. | grep -v '^[^ ]* \(Fix\|Merge\|Update\)')
             fi
-          command:
+          command: |
             cd ..
             git clone git@github.com:nem-toolchain/nem-toolchain.github.io.git
             cd ../nem-toolchain
@@ -25,7 +25,7 @@ jobs:
             git config user.name "$USER_NAME"
             git config user.email "$USER_EMAIL"
             git add -fA
-            git commit --allow-empty -m "$(git log -1 --pretty=%B) [ci skip]"
+            git commit --allow-empty -m "$(git log -1 --pretty=%B) [ci deploy]"
             git push
 
 deployment:
