Fixed website deploy stage for circleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,15 +17,15 @@ jobs:
                 bash -s -- --debug --release-notes <(git log --pretty=oneline --abbrev-commit $(git describe --tags --abbrev=0)^.. | grep -v '^[^ ]* \(Fix\|Merge\|Update\)')
             fi
           command: |
-            cd ..
-            git clone git@github.com:nem-toolchain/nem-toolchain.github.io.git
-            cd ../nem-toolchain
-            make static
-            cd ../nem-toolchain.github.io
-            git config user.name "$USER_NAME"
-            git config user.email "$USER_EMAIL"
-            git add -fA
-            git commit --allow-empty -m "$(git log -1 --pretty=%B) [ci deploy]"
+            cd .. &&
+            git clone git@github.com:nem-toolchain/nem-toolchain.github.io.git &&
+            cd ../nem-toolchain &&
+            make static &&
+            cd ../nem-toolchain.github.io &&
+            git config user.name "$USER_NAME" &&
+            git config user.email "$USER_EMAIL" &&
+            git add -fA &&
+            git commit --allow-empty -m "$(git log -1 --pretty=%B) [ci deploy]" &&
             git push
 
 deployment:
