--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.8
+      - image: circleci/golang:1.9
     working_directory: /go/src/github.com/nem-toolchain/nem-toolchain
     steps:
       - checkout
@@ -15,7 +15,20 @@ jobs:
             if [[ -n ${CIRCLE_TAG} ]]; then
               curl -sL https://git.io/goreleaser |
                 bash -s -- --debug --release-notes <(git log --pretty=oneline --abbrev-commit $(git describe --tags --abbrev=0)^.. | grep -v '^[^ ]* \(Fix\|Merge\|Update\)')
+              cd ..
+              git clone git@github.com:nem-toolchain/nem-toolchain.github.io.git
+              cd nem-toolchain
+              go get github.com/apex/static/cmd/static-docs
+              make static
+              export GIT_LOG="$(git log `git describe --tags --abbrev=0`..HEAD --oneline) [circle_ci]"
+              cd ../nem-toolchain.github.io
+              git config user.name "$USER_NAME"
+              git config user.email "$USER_EMAIL"
+              git add -fA
+              git commit --allow-empty -m "$(echo $GIT_LOG)"
+              git push
             fi
+
 deployment:
   trigger_tag:
     tag: /.*/
