--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ go:
   - 1.9
   - tip
 before_install: make setup
-script: make ci
+script: make test
 notifications:
   email:
     on_success: never
