Add Appveyor CI support
Add Appveyor CI support

Add Appveyor CI support

Add Appveyor CI support

Add Appveyor CI support

Add Appveyor CI support

Add Appveyor CI support

Add Appveyor CI support

Add Appveyor CI support

Add Appveyor CI support

Add Appveyor CI support

Add Appveyor CI support

Add Appveyor CI support

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,11 @@ go:
   - 1.8
   - 1.9
   - tip
-before_install: make setup
+matrix:
+  allow_failures:
+    - go: tip
+before_install:
+  - make setup
 script:
   - make build
   - make test
